examples/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: election-agent
    app.kubernetes.io/instance: election-agent-kz1
    app.kubernetes.io/version: 1.0.0
  name: election-agent
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: election-agent-kz1
      app.kubernetes.io/name: election-agent
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: election-agent-kz1
        app.kubernetes.io/name: election-agent
        app.kubernetes.io/version: 1.0.0
    spec:
      restartPolicy: Always
      serviceAccountName: election-agent
      automountServiceAccountToken: true
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/instance: election-agent-kz1
              app.kubernetes.io/name: election-agent
      containers:
        - name: election-agent
          # env:
          #   - name: EA_ENV
          #     value: "production"
          #   - name: EA_REDIS_MODE
          #     value: "single"
          #   - name: EA_REDIS_URLS
          #     value: "redis://redis1-master:6379,redis://redis2-master:6379,redis://redis3-master:6379"
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: grpc
              protocol: TCP
          image: election-agent:1.0.0
          imagePullPolicy: Never
          livenessProbe:
            grpc:
              port: 443
              service: liveness
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            grpc:
              port: 443
              service: readiness
            failureThreshold: 4
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 1000m
              memory: 400Mi
            limits:
              cpu: 1500m
              memory: 600Mi
