examples/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: election-agent
spec:
  type: ClusterIP
  ports:
    - name: "http-api"
      targetPort: http
      port: 80
    - name: "grpc-api"
      targetPort: grpc
      port: 443
  selector:
    app.kubernetes.io/instance: election-agent-kz1
    app.kubernetes.io/name: election-agent
