examples/k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: election-agent
spec:
  host: election-agent
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
